--- a/package.json
+++ b/package.json
@@ -1,41 +1,23 @@
 {
-  "name": "storefront",
-  "title": "Storefront",
-  "version": "2.3.2",
-  "homepage": "http://woocommerce.com/storefront/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/woothemes/storefront.git"
-  },
-  "scripts": {
-    "build": "grunt",
-    "css": "grunt css",
-    "watch": "grunt watch"
-  },
-  "license": "GPL-2.0+",
-  "main": "Gruntfile.js",
-  "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "grunt": "~1.0.1",
-    "grunt-checktextdomain": "^1.0.1",
-    "grunt-contrib-compress": "^1.4.3",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "~2.1.0",
-    "grunt-contrib-jshint": "~1.1.0",
-    "grunt-contrib-uglify": "~2.3.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-rtlcss": "~2.0.1",
-    "grunt-sass": "~2.0.0",
-    "grunt-stylelint": "~0.9.0",
-    "grunt-wp-i18n": "^1.0.0",
-    "node-bourbon": "~4.2.8",
-    "node-sass": "~4.5.2",
-    "stylelint": "~8.2.0",
-    "susy": "~2.2.12"
-  },
-  "engines": {
-    "node": ">=0.8.0",
-    "npm": ">=1.1.0"
-  }
+    "devDependencies": {
+        "babel-core": "^6.26.3",
+        "browser-sync": "^2.24.5",
+        "del": "^3.0.0",
+        "gulp": "^3.9.1",
+        "gulp-babel": "^7.0.1",
+        "gulp-concat": "^2.6.1",
+        "gulp-css-globbing": "^0.2.2",
+        "gulp-load-plugins": "^1.5.0",
+        "gulp-sass": "^4.0.1",
+        "gulp-sourcemaps": "^2.6.4",
+        "gulp-uglify": "^3.0.0",
+        "gulp-wp-pot": "^2.3.2",
+        "node-sass": "~4.5.2",
+        "run-sequence": "^2.2.1",
+        "vinyl-buffer": "^1.0.1"
+    },
+    "engines": {
+        "node": ">=0.8.0",
+        "npm": ">=1.1.0"
+    }
 }
