--- a/.editorconfig
+++ b/.editorconfig
@@ -20,5 +20,5 @@ trim_trailing_whitespace = false
 
 [*.{md,json,yml}]
 trim_trailing_whitespace = false
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
