--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "gulp-concat": "^2.6.1",
         "gulp-css-globbing": "^0.2.2",
         "gulp-load-plugins": "^1.5.0",
+        "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.1",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-uglify": "^3.0.0",
