update infor to style.css and readme.txt file

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "woocommerce/woostify",
+	"name": "woostify",
 	"description": "Woostify is a robust and flexible WordPress theme, designed and built by the team at WooCommerce to help you make the most out of using the WooCommerce plugin to power your online store. It's available to download for free from the WordPress theme repository.",
-	"homepage": "https://woocommerce.com/",
+	"homepage": "https://woostify.com/",
 	"type": "wordpress-theme",
 	"license": "GPL-2.0+",
 	"require": {
