--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "engines": {
         "node": ">=0.8.0",
         "npm": ">=1.1.0"
+    },
+    "dependencies": {
+        "npm": "^6.4.1"
     }
 }
