update some file for version 1.1.5

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /woostify/
 *.log
 *.map
-.sass-cache
 
 # Codekit
 config.codekit
@@ -24,7 +23,7 @@ config.codekit
 /vendor
 
 # Sublime
-*.cache
+*cache*
 *sublime*
 
 # FTP
