--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
         "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.1",
         "gulp-sourcemaps": "^2.6.4",
-        "gulp-uglify": "^3.0.0",
+        "gulp-uglify-es": "^2.0.0",
         "gulp-wp-pot": "^2.3.2",
         "gulp-zip": "^4.2.0",
-        "node-sass": "^4.5.2",
+        "node-sass": "^4.14.1",
         "run-sequence": "^2.2.1",
         "vinyl-buffer": "^1.0.1"
     },
@@ -22,6 +22,6 @@
         "npm": ">=1.1.0"
     },
     "dependencies": {
-        "npm": "^6.4.1"
+        "npm": "^6.14.5"
     }
 }
