--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
         "npm": ">=1.1.0"
     },
     "dependencies": {
-        "npm": "^6.14.5",
-        "sass": "^1.26.10"
+        "npm": "^6.14.5"
     }
 }
