--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
     "devDependencies": {
         "browser-sync": "^2.27.5",
         "del": "^6.0.0",
-        "gulp": "^4.0.2",
+        "gulp": "^4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-css-globbing": "^0.2.2",
-        "gulp-debug": "^4.0.0",
+        "gulp-debug": "^3.2.0",
         "gulp-load-plugins": "^2.0.7",
         "gulp-rename": "^2.0.0",
-        "gulp-sass": "^5.0.0",
+        "gulp-sass": "^5.1.0",
         "gulp-sourcemaps": "^3.0.0",
         "gulp-uglify-es": "^3.0.0",
         "gulp-wp-pot": "^2.5.0",
-        "gulp-zip": "^5.1.0",
-        "node-sass": "^6.0.1",
+        "gulp-zip": "^4.2.0",
+        "node-sass": "^7.0.1",
         "run-sequence": "^2.2.1",
         "vinyl-buffer": "^1.0.1"
     },
@@ -22,6 +22,7 @@
         "npm": ">=1.1.0"
     },
     "dependencies": {
-        "npm": "^7.20.6"
+        "npm": "^8.12.1",
+        "sass": "^1.52.3"
     }
 }
